--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "yahmcbot",
+	"name": "yaibot",
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
@@ -13,13 +13,13 @@
 	},
 	"dependencies": {
 		"@grammyjs/menu": "^1.3.0",
-		"@grammyjs/types": "^3.20.0",
 		"drizzle-orm": "^0.43.1",
 		"grammy": "^1.36.3"
 	},
 	"devDependencies": {
 		"@cloudflare/vitest-pool-workers": "^0.8.38",
 		"@cloudflare/workers-types": "^4.20250614.0",
+		"@grammyjs/types": "^3.20.0",
 		"@types/node": "^24.0.1",
 		"dotenv": "^16.5.0",
 		"typescript": "^5.8.3",
