--- a/package.json
+++ b/package.json
@@ -3,27 +3,24 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
-		"deploy": "wrangler deploy --var BOT_INFO:$(bun run scripts/get_me.ts)",
-		"dev": "wrangler dev --var BOT_INFO:$(bun run scripts/get_me.ts)",
+		"deploy": "wrangler deploy",
+		"dev": "wrangler dev",
 		"setcommand": "bun run scripts/set_my_command.ts",
 		"setwebhook": "bun run scripts/set_webhook.ts",
-		"start": "wrangler dev",
 		"test": "vitest",
-		"cf-typegen": "wrangler types"
+		"types": "wrangler types"
 	},
 	"dependencies": {
-		"@grammyjs/menu": "^1.3.0",
-		"drizzle-orm": "^0.44.2",
-		"grammy": "^1.36.3"
+		"@grammyjs/menu": "^1.3.1",
+		"drizzle-orm": "^0.44.5",
+		"grammy": "^1.38.2"
 	},
 	"devDependencies": {
-		"@cloudflare/vitest-pool-workers": "^0.8.41",
-		"@cloudflare/workers-types": "^4.20250619.0",
-		"@grammyjs/types": "^3.20.0",
-		"@types/node": "^24.0.3",
-		"dotenv": "^16.5.0",
-		"typescript": "^5.8.3",
+		"@types/node": "^24.5.2",
+		"@cloudflare/vitest-pool-workers": "^0.8.71",
+		"@grammyjs/types": "^3.22.2",
+		"dotenv": "^17.2.2",
 		"vitest": "~3.2.4",
-		"wrangler": "^4.20.3"
+		"wrangler": "^4.38.0"
 	}
 }
