--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,16 @@
 {
 	"compilerOptions": {
-		"target": "es2021",
-		"lib": [
-			"es2021"
-		],
-		"jsx": "react-jsx",
-		"module": "es2022",
+		"target": "ESNext",
+		"module": "ESNext",
 		"moduleResolution": "Bundler",
-		"types": [
-			"@cloudflare/workers-types/2023-07-01"
-		],
-		"resolveJsonModule": true,
-		"allowJs": true,
-		"checkJs": false,
-		"noEmit": true,
-		"isolatedModules": true,
-		"allowSyntheticDefaultImports": true,
-		"forceConsistentCasingInFileNames": true,
 		"strict": true,
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"lib": [
+			"ESNext"
+		],
+		"types": [
+			"./worker-configuration.d.ts",
+		],
 	},
 	"exclude": [
 		"test",
